--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,3 +1,7 @@
 {
-  "plugins": ["react-hot-loader/babel", "@babel/plugin-syntax-dynamic-import"]
+  "plugins": [
+    "react-hot-loader/babel",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-class-properties",
+  ]
 }
