--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "start": "webpack-dev-server --config ./.internals/webpack.development.js --inline --hot"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@withkoji/custom-vcc-sdk": "0.0.6",
     "@withkoji/vcc": "^1.1.1",
     "react": "^16.8.6",
