--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -3,5 +3,6 @@
     "react-hot-loader/babel",
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-destructuring"
   ]
 }
