--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.11.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "styled-components": "^4.2.0",
     "whatwg-fetch": "^3.0.0"
