--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "styled-components": "^4.2.0",
+    "webfontloader": "^1.6.28",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
