--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@withkoji/custom-vcc-sdk": "0.0.6",
     "@withkoji/vcc": "^1.1.1",
     "md5": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.11.1",
