--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "4.16.3",
     "md5": "^2.2.1",
+    "node-fetch": "^2.6.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
