--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "4.16.3",
     "md5": "^2.2.1",
     "node-fetch": "^2.6.0",
+    "profane-words": "^1.3.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
