--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@withkoji/custom-vcc-sdk": "0.0.6",
     "@withkoji/vcc": "^1.1.1",
+    "howler": "^2.1.3",
     "is-dark-color": "^1.2.0",
     "md5": "^2.2.1",
     "prop-types": "^15.7.2",
